# fastapi-api-key

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: develop.yml  main.yml  release.yml
deprecated/fastapi-api-key/: README.md  pyproject.toml
deprecated/fastapi-api-key/src/fastapi_api_key/: __init__.py
docs/: index.md  quickstart.md  schema.mermaid
docs/advanced/: custom-model.md
docs/reference/: index.md  repositories.md  router.md  service.md
docs/usage/: cache.md  custom-model.md  custom.md  database.md  django.md  dotenv.md  inmemory.md  litestar.md  quart.md  router.md  scopes.md  sqlalchemy.md  typer.md
examples/: example_cached.py  example_cli.py  example_fastapi.py  example_fastapi_custom.py  example_fastapi_scopes.py  example_fastapi_v2.py  example_inmemory.py  example_inmemory_env.py  example_scopes.py  example_sql.py  example_sql_custom.py
quickstart/: index.html
search/: search_index.json
src/fastapi_api_key/: __init__.py  __main__.py  _schemas.py  _types.py  api.py  cli.py  dev.py  litestar_api.py  quart_api.py  router.py  service.py  utils.py
src/keyshield/: __init__.py  __main__.py  _schemas.py  _types.py  api.py  cli.py  litestar_api.py  quart_api.py
tests/: conftest.py  settings_test_django.py  test_acceptation.py  test_domain.py  test_regression.py  test_repo.py  test_svc.py
tests/regression/: test_library.py  test_svc.py
tests/unit/: test_api.py  test_cached_service.py  (+10 more)
(+54 files in other folders)
