[project]
name = "fastapi-api-key"
version = "1.2.0"
description = "DEPRECATED: fastapi-api-key has been renamed to keyshield. Install keyshield instead."
readme = "README.md"
authors = [
    { name = "Athroniaeth" }
]
keywords = ["api", "api key", "authentication", "authorization", "security", "fastapi"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "keyshield>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/Athroniaeth/keyshield"
Documentation = "https://github.com/Athroniaeth/keyshield#readme"
Issues = "https://github.com/Athroniaeth/keyshield/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_api_key"]
